--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -3333,6 +3333,16 @@ textarea{
      padding:2.5px 0 2.5px ;
 }
 
+.categories-container{
+     width: 100%;
+     display: flex;
+     flex-direction: row;
+     align-items: flex-start;
+     justify-content: space-evenly;
+     gap: 5px;
+     flex-wrap: wrap;
+}
+
 .view-more-container{
      justify-content: flex-end;
 }
@@ -4018,19 +4028,19 @@ textarea{
 
 /* small container styles */
 .category-square{
-     width:13%;
-     min-width: 100px;
-     max-width: 300px;
+     width: 12%;
+     min-width: 150px;
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: flex-start;
      margin: 0px 0 10px;
-     padding: 5px 0;
+     padding-bottom:5px;
      border-radius: 10px;
      transition: all 0.5s;
      margin: 5px 3px;
-     /* background-color: var(--white-text); */
+     border: 1.1px solid var(--text-color-para2);
+     overflow: hidden;
 }
 
 .category-square:hover{
@@ -4040,12 +4050,9 @@ textarea{
 }
 .category-square .img{
      position: relative;
-     width: clamp(70px, 45%, 150px);
+     width: 100%;
      padding: 15px;
-     border-radius: 50%;
-     aspect-ratio: 1/1;
-     /* background-color: var(--back-color-gold1); */
-     background-color: var(--back-color-gold2);
+     aspect-ratio: 1000/500;
      mix-blend-mode: multiply;
      display: flex;
      flex-direction: row;
@@ -4056,14 +4063,13 @@ textarea{
 .category-square .img img{
      position: absolute;
      align-self: center;
-     width: 60%;
-     /* max-height: 40px; */
-     max-height: 80%;
+     width: 100%;
+     height: 100%;
 }
 .category-square h3{
-     font-size: 0.8rem;
+     font-size: 0.75rem;
      color: var(--text-color-black);
-     font-weight: 700;
+     font-weight: 600;
      margin-top:5px;
      max-width: 95%;
      text-align: center;
@@ -6607,6 +6613,68 @@ textarea{
      font-weight: 700;
 }
 
+.admin-category-card{
+     width: 45%;
+     display: flex;
+     flex-direction: row;
+     align-items: flex-start;
+     justify-content: space-between;
+     border: 1.2px solid var(--back-gold-color-v1);
+     border-radius: 5px;
+     margin-block: 10px;
+     padding: 10px;
+     position: relative;
+}
+
+.admin-category-card .img-container{
+     width: 30%;
+     border-radius: 5px;
+}
+
+.admin-category-card .img-container .img{
+     width: 100%;
+}
+.admin-category-card .img-container .btn{
+     padding: 5px 10px ;
+     border: 1.1px solid var(--text-color-para2);
+     border-radius: 4px;
+     font-size: 0.7rem;
+     font-weight: 500;
+     color: var(--text-color-para2);
+     cursor: pointer;
+     transition: all 0.5s ease;
+}
+
+.admin-category-card .img-container .btn:hover {
+     background-color: var(--text-color-title);
+     border-color: var(--text-color-title);
+     color: var(--white-text);
+}
+
+.admin-category-card .content{
+     width: 65%;
+     display: flex;
+     flex-direction: column;
+     align-items: flex-start;
+     gap: 5px;
+}
+
+.admin-category-card .content h4{
+     font-size: 0.9rem;
+     font-weight: 700;
+     color: var(--text-color-title);
+}
+
+.admin-category-card .content h4 span{
+     font-size: 0.85rem;
+     color: var(--text-color-para2);
+}
+
+.admin-category-card .content p{
+     font-size: 0.8rem;
+     font-weight: 500;
+     color: var(--text-color-para1);
+}
 
 .admin-shops-container {
      width: 100%;
