--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -1451,7 +1451,7 @@ textarea{
 
 .home .hello-section .col h1{
      color: white;
-     font-size: 2.5rem;
+     font-size: 2.6rem;
      font-weight: 800;
      margin: 0 0 10px;
 } 
@@ -1800,6 +1800,121 @@ textarea{
 .vendor-page-info .col .row a:hover{
      background-color: var(--text-color-title);
      cursor: pointer;
+}
+
+.market-page-title{
+     width: 95%;
+     padding: 20px 0;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: center;
+     border-radius: 10px;
+     background-color: var(--back-color-blue1);
+     margin-block:10px;
+}
+
+.market-page-title h1{
+     color: var(--light-gray);
+     font-size: 1.6rem;
+     font-weight: 700;
+}
+
+.market-page-categories {
+     width: 95%;
+     margin-block: 20px;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: flex-start;
+     gap: 15px;
+}
+
+.market-page-category-container{
+     width: 100%;
+     display: flex;
+     flex-direction: column;
+     align-items: flex-start;
+
+}
+
+.market-page-category-container-title {
+     width: 100%;
+     padding: 5px 20px;
+     border-bottom: 1.5px solid var(--back-gold-color-v1);
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: space-between;
+}
+
+.market-page-category-container-title h2{
+     color: var(--back-gold-color-v1);
+     font-size: 1.4rem;
+     font-weight: 700;
+}
+
+.market-page-category-container-title a {
+     font-size: 0.9rem;
+     font-weight: 600;
+     color: var(--text-color-title);
+     transition: all 0.3s ease;
+}
+
+.market-page-category-container-title a:hover{
+     font-weight: 700;
+}
+
+.market-page-sub-cat-container{
+     width: 95%;
+     margin: 0 auto;
+     display: flex;
+     flex-direction: row;
+     align-items: flex-start;
+     justify-content: flex-start;
+     overflow-x: auto;
+} 
+
+.market-page-sub-cat-container .content{
+     width: auto;
+     display: flex;
+     flex-direction: row;
+     align-items: flex-start;
+     justify-content: flex-start;
+     gap: 10px;
+     padding-block: 10px;
+
+}
+
+.market-page-category-page-header {
+     width: 95%;
+     aspect-ratio: 1000/100;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: center;
+     margin-block: 10px;
+     border-radius: 10px;
+     overflow: hidden;
+     background-repeat: no-repeat;
+     background-size: 100%;
+}
+
+.market-page-category-page-header .content{
+     width: 100%;
+     height: 100%;
+     background: #00000070;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: center;
+}
+
+.market-page-category-page-header .content h3{
+     font-size: 1.8rem;
+     font-weight: 800;
+     color: var(--white-text);
+     text-shadow: 0.4px 0.4px 1px var(--text-color-para1);
 }
 /* main containers */
 
@@ -3341,6 +3456,7 @@ textarea{
      justify-content: space-evenly;
      gap: 5px;
      flex-wrap: wrap;
+     padding-bottom: 10px;
 }
 
 .view-more-container{
@@ -4028,7 +4144,7 @@ textarea{
 
 /* small container styles */
 .category-square{
-     width: 12%;
+     width: 18%;
      min-width: 150px;
      display: flex;
      flex-direction: column;
@@ -4038,17 +4154,13 @@ textarea{
      border-radius: 2px;
      transition: all 0.5s;
      margin: 5px 3px;
-     /* border: 1.1px solid var(--text-color-title); */
+     /* border: 1.1px solid var(--gray-text); */
      /* box-shadow: 0.5px 0.5px 4px var(--text-color-para2); */
      overflow: hidden;
-     background-color: var(--light-gray);
+     /* background-color: var(--light-gray); */
+     cursor: pointer;
 }
 
-.category-square:hover{
-     cursor: pointer;
-     box-shadow: 1px 1px 2px var(--text-color-para1);
-     background-color: var(--white-text);
-}
 .category-square .img{
      position: relative;
      width: 100%;
@@ -4059,6 +4171,7 @@ textarea{
      flex-direction: row;
      align-items: center;
      justify-content: center;
+     background-color: var(--back-color-gold2);
 }
 
 .category-square .img img{
@@ -4071,27 +4184,80 @@ textarea{
 .category-square .content{
      width: 100%;
      display: flex;
-     flex-direction: column;
-     gap: 2.5px;
-     align-items: center;
+     flex-direction: row;
+     justify-content: flex-start;
+     gap: 4px;
+     align-items: flex-end;
+     padding: 2px 2%;
+     flex-wrap: wrap;
 }
-.category-square h3{
+.category-square p{
      font-size: 0.75rem;
      color: var(--text-color-title);
      font-weight: 600;
      margin-top:5px;
-     max-width: 95%;
-     text-align: center;
+     text-align: left;
      /* text-overflow: ellipsis; */
      white-space: wrap;
      /* overflow: hidden; */
 }
-.category-square p{
+.category-square p .small-paragraph{
      font-size: 0.7rem;
      /* color: var(--text-color-para1); */
      color: var(--back-color-blue2);
      letter-spacing: 0.45px;
      font-weight: 600;
+}
+
+.home-hot-category-card{
+     width: 22%;
+     min-width: 250px;
+     max-width: 300px;
+     display: flex;
+     flex-direction: column;
+     border-radius: 2.5px;
+     position: relative;
+     aspect-ratio: 1000/600;
+     cursor: pointer;
+     margin-block: 10px;
+     overflow: hidden;
+     transition: all 0.5s ease;
+}
+
+.home-hot-category-card img{
+     width: 100%;
+     height: 100%;
+     position: relative;
+     z-index: 0;
+}
+
+
+
+.home-hot-category-card .content{
+     width:100%;
+     height: 100%;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: flex-end;
+     padding: 10px;
+     background: linear-gradient(180deg, #00000010, var(--text-color-para1));
+     position: absolute;
+     top: 0;
+     left: 0;
+     z-index: 1;
+     transition: all 0.8s ease;
+}
+
+.home-hot-category-card .content:hover{
+     background: linear-gradient(180deg, #00000010, var(--text-color-black));
+}
+
+.home-hot-category-card .content h5{
+     color: var(--gray-text);
+     font-size: 0.9rem;
+     font-weight: 700;
+     text-align: center;
 }
 
 .top-deals-card{
