--- a/src/styles/MobileView.css
+++ b/src/styles/MobileView.css
@@ -44,7 +44,7 @@
           padding:5px 10px 10px;
      }
      .home .hello-section .col h1{
-          font-size: 2rem;
+          font-size: 1.8rem;
      }
 
      .inner-container .section-title {
@@ -216,6 +216,10 @@
 
      .categories-container {
           gap: 2px;
+     }
+
+     .home-hot-category-card {
+          width: 45%;
      }
 }
 
