--- a/src/styles/SpecialDevices.css
+++ b/src/styles/SpecialDevices.css
@@ -94,9 +94,9 @@
           width: 45%;
      }
 
-     .home .hello-section .col h1{
+     /* .home .hello-section .col h1{
           font-size:3rem;
-     }
+     } */
 
      .hero-banner-container img {
           max-height: 150px;
@@ -123,9 +123,9 @@
           width: 42.5%;
      }
 
-     .home .hello-section .col h1{
+     /* .home .hello-section .col h1{
           font-size:3rem;
-     }
+     } */
 }
 
 @media only screen and (max-width: 1200px){
@@ -140,9 +140,9 @@
           width: 45%;
      }
 
-     .home .hello-section .col h1{
+     /* .home .hello-section .col h1{
           font-size:2.4rem;
-     }
+     } */
 }
 
 @media only screen and (max-width: 1024px){
@@ -164,7 +164,7 @@
           width: 95%;
           margin: 0 auto;
      }
-     .home .hello-section .col h1{
+     /* .home .hello-section .col h1{
           font-size:2.2rem;
-     }
+     } */
 }
