--- a/src/styles/TabletView.css
+++ b/src/styles/TabletView.css
@@ -30,9 +30,9 @@
           justify-content: center;
      }
 
-     .home .hello-section .col h1{
+     /* .home .hello-section .col h1{
           font-size:2.6rem;
-     }
+     } */
 
      .home .hello-section .sec-banner {
           
@@ -226,7 +226,9 @@
           width: 70%;
      }
 
-     
+     .market-page-category-page-header {
+          aspect-ratio: 1000/150;
+     }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
@@ -642,6 +644,18 @@
 
      .admin-category-card{
           width: 70%;
+     }
+
+     .home-hot-category-card {
+          width: 27%;
+     }
+
+     .market-page-category-page-header { 
+          aspect-ratio: 1000/200;
+     }
+
+     .market-page-category-page-header .content h3{
+          font-size: 1.4rem;
      }
 }
 
