updated the category view

--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -4171,14 +4171,13 @@ textarea{
      flex-direction: row;
      align-items: center;
      justify-content: center;
-     background-color: var(--back-color-gold2);
+     background-color: var(--text-color-para2);
+     padding: 5px;
 }
 
 .category-square .img img{
-     position: absolute;
-     align-self: center;
      width: 100%;
-     height: 100%;
+     height: auto;
 }
 
 .category-square .content{
