--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -4171,7 +4171,7 @@ textarea{
      flex-direction: row;
      align-items: center;
      justify-content: center;
-     background-color: var(--back-color-gold2);
+     background-color: var(--text-color-para2);
      padding: 5px;
 }
 
