--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -2757,6 +2757,19 @@ textarea{
      font-weight: 600;
 }
 
+.select-file-btn{
+     width: auto;
+     padding: 7.5px 20px;
+     border-radius: 5px;
+     color: var(--text-color-title);
+     cursor: pointer;
+     background-color: var(--white-text);
+     font-size: 0.8rem;
+     font-weight: 600;
+     outline: none;
+     border: 1.2px solid var(--text-color-title);
+}
+
 .submit-btn{
      display: flex;
      flex-direction: row;
@@ -3212,7 +3225,7 @@ textarea{
      width: 95%;
      display: flex;
      flex-direction: row;
-     align-items: center;
+     align-items: flex-start;
      justify-content: space-between;
      flex-wrap: wrap;
      margin: 10px auto;
@@ -3431,6 +3444,103 @@ textarea{
      z-index: 0;
 }
 
+.image-uploader-container{
+     position: fixed;
+     z-index: 100;
+     background-color: #00000050;
+     padding: 20px;
+     top:0;
+     width:100%;
+     height: 100%;
+}
+
+.image-uploader-container .container {
+     width: 70%;
+     min-height: 80%;
+     max-width: 95%;
+     background: var(--light-gray);
+     border-radius: 10px;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: center;
+     overflow: hidden;
+     overflow-y: auto;
+     position: relative;
+}
+
+.image-uploader-container .container .close-btn{
+     position: absolute;
+     top: 0;
+     right: 0;
+     border-radius: 10px;
+     background-color: var(--back-gold-color-v1);
+     color: var(--back-color-gold1);
+     cursor: pointer;
+     padding: 5px 10px;
+
+}
+.image-uploader-container .container .image-preview{
+     width: 90%;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: flex-start;
+}
+
+.image-uploader-container .container .image-preview img {
+     width: 60%;
+     height: auto;
+}
+
+.image-uploader-container .container .upload-progress {
+     width: 80%;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     justify-content: space-between;
+}
+
+.image-uploader-container .container .upload-progress .upload-bar {
+     width: 70%;
+}
+
+.image-uploader-container .container .upload-progress .upload-bar p{
+     font-size: 0.8rem;
+     font-weight: 600;
+}
+
+.image-uploader-container .container .upload-progress .upload-bar p.uploading-text{
+     color: var(--text-color-para1);
+}
+
+.image-uploader-container .container .upload-progress .upload-bar p.done-uploading{
+     color: var(--featured-plan);
+}
+
+.image-uploader-container .container  .upload-btn-container{
+     width: 90%;
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     justify-content: center;
+}
+
+.image-uploader-container .container  .upload-btn-container input[type='file']{
+     display: none;
+}
+
+.image-upload-btn{
+     padding: 10px 20px;
+     border: none;
+     outline: none;
+     font-size: 0.9rem;
+     font-weight: 600;
+     background-color: var(--gray-text);
+     color: var(--text-color-title);
+     cursor: pointer;
+
+}
 /* end of fixed components */
 
 
@@ -5223,6 +5333,31 @@ textarea{
 .advert-page-mainAdvert .col .content{
      width: 100%;
      margin: 5px auto 10px;
+     display: flex;
+     flex-direction: row;
+     flex-wrap: wrap;
+     justify-content: flex-start;
+     gap: 10px;
+}
+
+.advert-page-mainAdvert .col .content .short-value {
+     width: auto;
+     padding: 5px 10px 5px 0;
+     display: flex;
+     flex-direction: row;
+     gap: 5px;
+     align-items: flex-end;
+}
+
+.advert-page-mainAdvert .col .content .short-value b{
+     font-size: 0.8rem;
+     color: var(--text-color-para1);
+}
+
+.advert-page-mainAdvert .col .content .short-value span {
+     font-size: 0.9rem;
+     font-weight: 600;
+     color: var(--text-color-title);
 }
 
 .advert-page-mainAdvert .col .content h4{
@@ -5230,7 +5365,7 @@ textarea{
      font-weight: 800;
      color: var(--text-color-title);
      margin: 5px 0;
-
+     width: 100%;
 }
 
 .advert-page-mainAdvert .col .content .group{
@@ -5258,6 +5393,22 @@ textarea{
      align-items: flex-start;
 }
 
+.advert-page-mainAdvert .col .content .html-value-container {
+     width: 100%;
+     padding: 10px;
+}
+
+.advert-page-mainAdvert .col .content .html-value-container ul,
+.advert-page-mainAdvert .col .content .html-value-container ol
+ {
+     width: 95%;
+     margin: 0 auto;
+}
+
+.advert-page-mainAdvert .col .content .html-value-container li{
+     font-size: 0.85rem;
+}
+
 .advert-page-mainAdvert .col .content p{
      font-size: 0.85rem;
      font-weight: 600;
@@ -5266,6 +5417,48 @@ textarea{
      margin-bottom: 10px;
      text-align: justify;
 }
+
+.advert-page-mainAdvert .col .content .inner-image{
+     width: 100%;
+     display: flex;
+     flex-direction: column;
+     align-items: flex-start;
+     gap: 5px;
+}
+
+.advert-page-mainAdvert .col .content .inner-image b {
+     font-size: 0.9rem;
+     font-weight: 600;
+     color: var(--text-color-title);
+}
+
+.advert-page-mainAdvert .col .content .inner-image img {
+     width: 95%;
+     margin: 0 auto;
+     border: 1px solid var(--gray-text);
+     border-radius: 10px;
+}
+
+.advert-page-mainAdvert .col .content .inner-image p{
+     font-size: 0.8rem;
+     font-weight: 600;
+}
+
+.advert-page-mainAdvert .col .content .inner-image p .view-btn{
+     padding: 5px 10px;
+     background-color: var(--back-gold-color-v1);
+     cursor: pointer;
+     border-radius: 10px;
+     color: var(--light-gray);
+     border: 1.1px solid var(--back-gold-color-v1);
+}
+
+.advert-page-mainAdvert .col .content .inner-image p .view-btn:hover {
+     background-color: var(--light-gray);
+     color: var(--back-gold-color-v1);
+}
+
+
 
 .advert-page-mainAdvert .col .advert-page-info{
      width: 100%;
