--- a/src/styles/TabletView.css
+++ b/src/styles/TabletView.css
@@ -657,6 +657,10 @@
      .market-page-category-page-header .content h3{
           font-size: 1.4rem;
      }
+
+     .image-uploader-container .container{
+          width: 90%;
+     }
 }
 
 
