updated the the market place page

--- a/src/styles/MobileView.css
+++ b/src/styles/MobileView.css
@@ -221,6 +221,10 @@
      .home-hot-category-card {
           width: 45%;
      }
+
+     .market-page-sub-cat-container{
+          gap: 5%;
+     }
 }
 
 
