--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -1810,7 +1810,7 @@ textarea{
      align-items: center;
      justify-content: center;
      border-radius: 10px;
-     background-color: var(--back-color-blue1);
+     background-color: var(--text-color-title);
      margin-block:10px;
 }
 
@@ -1835,13 +1835,15 @@ textarea{
      display: flex;
      flex-direction: column;
      align-items: flex-start;
+     background-color: var(--white-text);
+     border-radius: 20px;
+     padding: 20px;
 
 }
 
 .market-page-category-container-title {
-     width: 100%;
-     padding: 5px 20px;
-     border-bottom: 1.5px solid var(--back-gold-color-v1);
+     width: 95%;
+     padding: 0 5px;
      display: flex;
      flex-direction: row;
      align-items: center;
@@ -1857,16 +1859,17 @@ textarea{
 .market-page-category-container-title a {
      font-size: 0.9rem;
      font-weight: 600;
-     color: var(--text-color-title);
+     color: var(--back-color-blue2);
      transition: all 0.3s ease;
 }
 
 .market-page-category-container-title a:hover{
      font-weight: 700;
+     text-decoration: underline;
 }
 
 .market-page-sub-cat-container{
-     width: 95%;
+     width: 100%;
      margin: 0 auto;
      display: flex;
      flex-direction: row;
@@ -1876,13 +1879,13 @@ textarea{
 } 
 
 .market-page-sub-cat-container .content{
-     width: auto;
+     width: 100%;
      display: flex;
      flex-direction: row;
+     flex-wrap: wrap;
      align-items: flex-start;
      justify-content: flex-start;
-     gap: 10px;
-     padding-block: 10px;
+     gap: 2.5%;
 
 }
 
@@ -4319,51 +4322,54 @@ textarea{
 }
 
 .home-hot-category-card{
-     width: 22%;
-     min-width: 250px;
+     width: 22.5%;
      max-width: 300px;
      display: flex;
      flex-direction: column;
      border-radius: 2.5px;
      position: relative;
-     aspect-ratio: 1000/600;
      cursor: pointer;
      margin-block: 10px;
      overflow: hidden;
      transition: all 0.5s ease;
+     border-radius: 5px;
+     padding: 5px;
+     box-shadow: 1px 1px 4px var(--gray-text);
+     transition: all 0.4s ease;
+}
+
+.home-hot-category-card:hover {
+     box-shadow: 1px 1px 10px var(--gray-text);
 }
 
 .home-hot-category-card img{
      width: 100%;
-     height: 100%;
+     height: auto;
      position: relative;
      z-index: 0;
+     border-radius: 5px;
 }
 
 
 
 .home-hot-category-card .content{
      width:100%;
-     height: 100%;
      display: flex;
      flex-direction: column;
-     align-items: center;
+     align-items: flex-start;
      justify-content: flex-end;
-     padding: 10px;
-     background: linear-gradient(180deg, #00000010, var(--text-color-para1));
-     position: absolute;
+     padding: 2px;
+     position: relative;
      top: 0;
      left: 0;
      z-index: 1;
      transition: all 0.8s ease;
 }
 
-.home-hot-category-card .content:hover{
-     background: linear-gradient(180deg, #00000010, var(--text-color-black));
-}
+
 
 .home-hot-category-card .content h5{
-     color: var(--gray-text);
+     color: var(--text-color-para1);
      font-size: 0.9rem;
      font-weight: 700;
      text-align: center;
@@ -4639,7 +4645,7 @@ textarea{
 }
 
 .job-card .content p{
-     font-size: 0.9rem;
+     font-size: 0.8rem;
      font-weight: 600;
      color: var(--text-color-title);
 }
@@ -4678,7 +4684,8 @@ textarea{
      border-radius:5px;
      padding: 5px 20px;
      cursor: pointer;
-     font-size: 0.9rem;
+     font-size: 0.8rem;
+     font-weight: 600;
      transition: all 0.5s ease;
 }
 
