--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -2158,7 +2158,7 @@ textarea{
      width: 100%;
      position: relative;
      display: flex;
-     flex-direction: row;
+     flex-direction: column;
      align-items: flex-start;
      justify-content: space-between;
      /* border: 1px solid var(--back-color-gold2); */
@@ -2167,25 +2167,35 @@ textarea{
      border-radius: 5px;
      overflow: hidden;
      background-color: var(--white-text);
+     padding: 5px;
+     border-radius: 10px;
+     gap: 5px;
 }
 
 .image-viewer .side-images{
-     width: 15%;
+     width: 100%;
      display: flex;
-     flex-direction: column;
+     flex-direction: row;
      align-items: center;
      justify-content: flex-start;
-     padding: 5px 0;
-     max-height: 50vh;
+     padding: 5px;
+     max-height: 100%;
      overflow: hidden;
-     overflow-y: scroll;
+     overflow-x: scroll;
+     border-radius: 10px;
+     gap: 5px;
+     border: 1.3px solid var(--gray-text);
 }
 
 .image-viewer .side-images img{
-     width: 90%;
-     margin-bottom: 5px;
+     width: auto;
+     height: 100px;
      cursor: pointer;
-     border-radius: 2px;
+     border-radius: 10px;
+}
+
+.image-viewer .side-images img:hover {
+     border: 1.5px solid var(--gray-text);
 }
 
 .image-viewer .side-images .active-image{
@@ -2196,12 +2206,13 @@ textarea{
 
 
 .image-viewer .main-image{
-     width: 85%;
+     width: 100%;
      display: flex;
      flex-direction: row;
      align-items: center;
      justify-content: center;
      border: 1px solid var(--gray-text);
+     border-radius: 10px;
 }
 
 .image-viewer .main-image img{
@@ -4606,6 +4617,11 @@ textarea{
 
 }
 
+.my-image-container{
+     background-size: 100%;
+     background-position: center;
+}
+
 .ads-container-wrapped {
      width: 100%;
      display: flex;
@@ -5711,6 +5727,7 @@ textarea{
      align-items: flex-start;
      justify-content: space-between;
      flex-wrap: wrap;
+     gap: 10px;
 }
 
 .job-seeker-page-container .row .col{
@@ -5723,16 +5740,22 @@ textarea{
      align-items: flex-start;
      gap:20px;
      overflow: hidden;
+     flex-wrap: wrap;
 }
 
 .job-seeker-page-container .row .col .profile-image{
-     max-height: 100px;
+     max-height: 300px;
+     min-height: 200px;
      width: auto;
-     border-radius: 20px;
+     border-radius: 10px;
+}
+
+.job-seeker-page-container .row .col .profile-image .my-image-container{
+     background-position: top;
 }
 
 .job-seeker-page-container .row .col .profile-info{
-     width: auto;
+     width:90%;
      max-width: 70%;     
      display: flex;
      gap: 10px;
@@ -5749,6 +5772,11 @@ textarea{
      font-size: 0.9rem;
      font-weight: 700;
      color: var(--text-color-title);
+}
+
+.job-seeker-page-container .row .col .profile-info p a{
+     text-decoration: underline;
+     font-size: 0.9rem;
 }
 
 .job-seeker-page-container .row .col .description {
