--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -187,8 +187,8 @@ textarea{
 }
 
 .product-share-icon{
-     width: 22.5px;
-     height: 22.5px;
+     width: 30px;
+     aspect-ratio: 1/1;
      box-sizing: border-box;
      border-radius: 50%;
      background-color: var(--text-color-title);
@@ -1806,12 +1806,13 @@ textarea{
      width: 95%;
      padding: 20px 0;
      display: flex;
-     flex-direction: row;
+     flex-direction: column;
      align-items: center;
      justify-content: center;
      border-radius: 10px;
      background-color: var(--text-color-title);
      margin-block:10px;
+     gap: 10px;
 }
 
 .market-page-title h1{
@@ -1820,9 +1821,14 @@ textarea{
      font-weight: 700;
 }
 
-.market-page-categories {
-     width: 95%;
-     margin-block: 20px;
+.market-page-title p{
+     font-size: 0.8rem;
+     color: var(--gray-text);
+}
+
+.shop-page-categories {
+     width: 100%;
+     margin-block: 10px;
      display: flex;
      flex-direction: column;
      align-items: center;
@@ -1836,8 +1842,8 @@ textarea{
      flex-direction: column;
      align-items: flex-start;
      background-color: var(--white-text);
-     border-radius: 20px;
-     padding: 20px;
+     border-radius: 10px;
+     padding: 10px;
 
 }
 
@@ -1886,6 +1892,7 @@ textarea{
      align-items: flex-start;
      justify-content: flex-start;
      gap: 2.5%;
+     padding-inline: 5px;
 
 }
 
@@ -2215,6 +2222,28 @@ textarea{
      border-radius: 10px;
 }
 
+.image-viewer .review-icons {
+     position: absolute;
+     width: auto;
+     display: flex;
+     flex-direction: row;
+     align-items: center;
+     max-width: 100%;
+     top: 1px;
+     right: 1px;
+     gap: 10px;
+     border-radius: 10px;
+     background-color: var(--white-text);
+     padding:5px 10px;
+     box-shadow: 0.4px 0.4px 4px var(--gray-text);
+}
+
+.image-viewer .review-icons i{
+     color: var(--back-gold-color-v1);
+     font-size: 1.1rem;
+     cursor: pointer;
+}
+
 .image-viewer .main-image img{
      width: auto;
      height: auto;
@@ -2370,7 +2399,7 @@ textarea{
 .make-money-section .content .col p{
      font-size: 0.9rem;
      color: var(--light-gray);
-     font-weight: 600;
+     font-weight: 500;
      text-align: center;
 }
 .home-categories-section{
@@ -4279,7 +4308,7 @@ textarea{
      transition: all 0.5s;
      margin: 5px 3px;
      /* border: 1.1px solid var(--gray-text); */
-     /* box-shadow: 0.5px 0.5px 4px var(--text-color-para2); */
+     /* box-shadow: 0.5px 0.5px 2px var(--gray-text); */
      overflow: hidden;
      /* background-color: var(--light-gray); */
      cursor: pointer;
@@ -4295,7 +4324,7 @@ textarea{
      flex-direction: row;
      align-items: center;
      justify-content: center;
-     background-color: var(--back-color-gold2);
+     background-color: var(--text-color-para2);
      padding: 5px;
 }
 
@@ -4334,6 +4363,7 @@ textarea{
 
 .home-hot-category-card{
      width: 22.5%;
+     aspect-ratio: 100/70;
      max-width: 300px;
      display: flex;
      flex-direction: column;
@@ -4353,9 +4383,9 @@ textarea{
      box-shadow: 1px 1px 10px var(--gray-text);
 }
 
-.home-hot-category-card img{
+.home-hot-category-card .my-image-container{
      width: 100%;
-     height: auto;
+     height: 100%;
      position: relative;
      z-index: 0;
      border-radius: 5px;
@@ -4501,15 +4531,27 @@ textarea{
 }
 
 .product-square-container .content .row .ad-price{
-     font-size: 1rem;
+     font-size: 1.1rem;
      color: var(--back-color-red1);
      display: flex;
      flex-direction: row;
      justify-content: space-between;
      align-items: center;
      font-weight: 800;
+     display: flex;
+     width: 100%;
+     flex-direction: row;
+     align-items: center;
+     justify-content: space-between;
+     flex-wrap: wrap;
 }
 
+.product-square-container .content .row .ad-price .original-price{
+     font-size: 0.8rem !important;
+     color: var(--text-color-para2) !important;
+     text-decoration: line-through;
+     font-weight: 600;
+}
 
 .product-square-container .content .row b i{
      font-style: normal; 
@@ -4618,7 +4660,8 @@ textarea{
 }
 
 .my-image-container{
-     background-size: 100%;
+     background-size: cover;
+     background-repeat: no-repeat;
      background-position: center;
 }
 
@@ -5344,8 +5387,12 @@ textarea{
      margin: 5px auto;
 }
 
-.advert-page-mainAdvert .col{
-     width:48%;
+.advert-page-mainAdvert .col:nth-child(1){
+     width:60%;
+}
+
+.advert-page-mainAdvert .col:nth-child(2){
+     width:39%;
 }
 
 .advert-page-mainAdvert .col .cat{
@@ -5525,6 +5572,11 @@ textarea{
      margin: 2px auto;
      margin-bottom: 10px;
      text-align: left;
+     word-wrap: break-word;
+     overflow-wrap: break-word;
+     text-wrap: pretty;
+     -webkit-hyphens: auto;
+     hyphens: auto;
 }
 
 .advert-page-mainAdvert .col .content .inner-image{
