--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -1897,7 +1897,7 @@ textarea{
 }
 
 .market-page-category-page-header {
-     width: 95%;
+     width: 100%;
      aspect-ratio: 1000/100;
      display: flex;
      flex-direction: row;
@@ -1907,7 +1907,8 @@ textarea{
      border-radius: 10px;
      overflow: hidden;
      background-repeat: no-repeat;
-     background-size: 100%;
+     background-size: cover;
+     background-position: center;
 }
 
 .market-page-category-page-header .content{
@@ -1938,6 +1939,14 @@ textarea{
      padding-block: 5px;
 }
 
+.our-shop-page-ads-container{
+     width: 100%;
+     display: flex;
+     flex-direction: row;
+     justify-content: flex-start;
+     gap: 10px;
+     flex-wrap: wrap;
+}
 .ads-section-title{
      width: 100%;
      display: flex;
@@ -4307,54 +4316,67 @@ textarea{
      border-radius: 2px;
      transition: all 0.5s;
      margin: 5px 3px;
-     /* border: 1.1px solid var(--gray-text); */
-     /* box-shadow: 0.5px 0.5px 2px var(--gray-text); */
      overflow: hidden;
-     /* background-color: var(--light-gray); */
      cursor: pointer;
+     box-shadow: 0.5px 0.5px 4px var(--gray-text);
+     border-radius: 5px;
+     padding: 5px;
+     aspect-ratio: 100/80;
+}
+
+.category-square:hover {
+     box-shadow: 0.5px 0.5px 4px var(--text-color-para1);
+}
+
+
+.category-square:hover .img img{
+     filter: drop-shadow(1px 1px 3px #000000);
 }
 
 .category-square .img{
      position: relative;
      width: 100%;
+     height: 100%;
      padding: 15px;
-     aspect-ratio: 1000/500;
      mix-blend-mode: multiply;
      display: flex;
      flex-direction: row;
      align-items: center;
      justify-content: center;
-     background-color: var(--text-color-para2);
      padding: 5px;
+     border: 1px solid #00000010;
+     
+     border-radius: 5px;
 }
 
 .category-square .img img{
      width: 100%;
-     height: auto;
+     height: auto; 
+     transition: all 0.4s ease; 
 }
 
 .category-square .content{
      width: 100%;
      display: flex;
-     flex-direction: row;
+     flex-direction: column;
      justify-content: flex-start;
-     gap: 4px;
-     align-items: flex-end;
+     gap: 2px;
+     align-items: center;
      padding: 2px 2%;
      flex-wrap: wrap;
 }
+
 .category-square p{
      font-size: 0.75rem;
      color: var(--text-color-title);
      font-weight: 600;
-     margin-top:5px;
-     text-align: left;
+     text-align: center;
      /* text-overflow: ellipsis; */
      white-space: wrap;
      /* overflow: hidden; */
 }
 .category-square p .small-paragraph{
-     font-size: 0.7rem;
+     font-size: 0.65rem;
      /* color: var(--text-color-para1); */
      color: var(--back-color-blue2);
      letter-spacing: 0.45px;
