--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -4321,7 +4321,10 @@ textarea{
      box-shadow: 0.5px 0.5px 4px var(--gray-text);
      border-radius: 5px;
      padding: 5px;
-     aspect-ratio: 100/80;
+     aspect-ratio: 100/85;
+     gap: 5px;
+     text-wrap: pretty;
+     
 }
 
 .category-square:hover {
@@ -4361,16 +4364,16 @@ textarea{
      flex-direction: column;
      justify-content: flex-start;
      gap: 2px;
-     align-items: center;
+     align-items: flex-start;
      padding: 2px 2%;
      flex-wrap: wrap;
 }
 
 .category-square p{
-     font-size: 0.75rem;
-     color: var(--text-color-title);
-     font-weight: 600;
-     text-align: center;
+     font-size: 0.85rem;
+     color: var(--text-color-para1);
+     font-weight: 700;
+     text-align: left;
      /* text-overflow: ellipsis; */
      white-space: wrap;
      /* overflow: hidden; */
