--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,7 @@ html{
   margin: 0;
   font-family: 'Open Sans', sans-serif;
 }
+
+.goog-logo-link, .goog-te-gadget span {
+  display: none !important;
+}
