--- a/src/styles/General.css
+++ b/src/styles/General.css
@@ -72,6 +72,12 @@
      }
 }
 
+/* .goog-te-banner-frame.skiptranslate,
+.goog-logo-link,
+.goog-te-gadget span {
+     display: none !important;
+} */
+
 html{
      scroll-behavior: smooth;
      width: 100vw;
